# agforest

./: README.md
backend/: .env  Cargo.toml  Dockerfile  diesel.Dockerfile  diesel.toml  sqlx.Dockerfile
backend/.sqlx/: query-0558f567f5a53ba35b027f86285658384067cf1251b35506e9c636bf9c8a64de.json  query-0cef14c4e67827ec5feeb304ce9a67b651e142b3b0e16b1998708ff5e3183ee5.json  query-19c39002822826de72f68936e45d2edccdfaab1edf4efd59deda68125a9517a7.json  query-1dfc04ddce3d4e764725faf4ddf19247b52cec5c9f081ad4cc619cd8a50a18c0.json  query-2d87cb5c549dd77cbf30b7237902cdb283351e1b4f00ce552f4a148812d0636e.json  query-5e715be6cd492b9b1b31b68cc9ef2c70cc43821b46a2f815e725f3c0e2d754bd.json  query-5e8d11ee666c0e5ff67ef5140e8857670317755dd09392b91459f65e6d7c24f8.json  query-6556944f9f3f27bf14948583c54e8fb53a5cf942dd6b4e21d0b8f3398f66ea3b.json  query-7357e137da788b108d5016ca76d1fbb3b5ce596bde13b83839b39508044f8606.json  query-7559a862a49aa7485994f70d94fc60167775b1aa4f1c81b4e5128274e26b16ab.json  query-80927fa90bb0c0761657fc0416520fd0b8cd0509f5b0606b8d5c070518624030.json  query-83eae973d98415a6dc3ba55b848d43fbe8b8541dad6186b3455d1d1687f0ff99.json  query-9448b703c9300fa6dfdf8d04ef9cc44da4d562cf4588a1df59c453a48a386848.json  query-a62de8f2c917a6c23408dbbbc1677392c21dda7a3841bdb483ed7fab1c2e6af9.json  query-a734c69ec4b50a491d46c670fd4fe27b3c2db2a0b7ed41b9d49cfd5f566f2159.json  query-b1a5f2975b8665f4221a6a52b067e066ee6153b18c314afb856a95142d16169c.json  query-be18e3264efd93263af7fc36173aa2c18ee469b03ca58f5c9414e81e7e001def.json  query-be219d20bb700f14c3abac5fd11ca57e4629717a50546c2e2ca8a3dee71eaa6b.json  (+10 more)
backend/migrations/: 20251223075351_initialize.up.sql  (+2 more)
(+127 files in other folders)
