[package]
name    = "agforest-backend"
edition = "2024"
publish = false

[dependencies]
actix-web          = { version = "4" }
anyhow             = { version = "1" }
argon2             = { version = "0.5", features = ["std"] }
blake3             = { version = "1" }
chrono             = { version = "0.4", features = ["serde"] }
config             = { version = "0.15" }
serde              = { version = "1", features = ["derive"] }
serde_json         = { version = "1" }
sqlx               = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
tokio              = { version = "1", features = ["full"] }
tracing            = { version = "0.1" }
tracing-actix-web  = { version = "0.7" }
tracing-subscriber = { version = "0.3" }
